Bone vertex Child of Constraint problem #66080

Closed
opened 2019-06-24 15:18:41 +02:00 by johan tri handoyo · 7 comments

System Information
Operating system: Window 7
Graphics card: Quadro FX 4800

Blender Version
Broken: (blender-2.80.0-git.9c5d54bfaf48-windows64)
Worked: (blender 2.79b)

Short description of error
The Child of Constraint of bone, when parented to a vertex group, the Set Inverse feature doesn't works. Bone will keep in its deformed location.

Exact steps for others to reproduce the error
Open the bone child of vertex set inverse .blend, select the bone and try to click Set Inverse. Nothing happened. This should works on Blender 2.79b.
bone child of vertex set inverse .blend

**System Information** Operating system: Window 7 Graphics card: Quadro FX 4800 **Blender Version** Broken: (blender-2.80.0-git.9c5d54bfaf48-windows64) Worked: (blender 2.79b) **Short description of error** The Child of Constraint of bone, when parented to a vertex group, the Set Inverse feature doesn't works. Bone will keep in its deformed location. **Exact steps for others to reproduce the error** Open the bone child of vertex set inverse .blend, select the bone and try to click Set Inverse. Nothing happened. This should works on Blender 2.79b. [bone child of vertex set inverse .blend](https://archive.blender.org/developer/F7544654/bone_child_of_vertex_set_inverse_.blend)

Added subscriber: @JohanTriHandoyo

Added subscriber: @JohanTriHandoyo
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-06-25 12:36:57 +02:00
Member

Confirmed.
bcefceb200 fixed this for object updates, looks like bones need another depsgraph kick...
Checking...

Confirmed. bcefceb200 fixed this for object updates, looks like bones need another depsgraph kick... Checking...

Added subscriber: @Animynous

Added subscriber: @Animynous

This issue was referenced by 609e16339f

This issue was referenced by 609e16339f13252a2dcaa2a5db4cf45c5e49e80b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

committed a fix now (609e16339f), thorough testing is welcome :)

committed a fix now (609e16339f), thorough testing is welcome :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66080
No description provided.